fix: resons to love us overlapping with img

--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,9 @@ legend {
     float: right;
 }
 
+.clear {
+    clear: both;
+}
 label {
     margin: 10px 15px 5px 0;
 }
@@ -346,4 +349,14 @@ label {
     height: 100%;
     width: 100%;
     border: none;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#table-coffee{
+    width: 70%;
 }
